home - optimize parallax images, fix footer z-index

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -37,7 +37,7 @@ $zindex-page-header: 7;
 $zindex-page: 1;
 $zindex-page-content: 2;
 $booking-bar-zindex: 3;
-$zindex-page-footer: 1;
+$zindex-page-footer: 2;
 
 // loading
 $loading-transition-time: 500ms;
